# OCCT_CAD

./: CMakeLists.txt  CMakeUserPresets.json  README.md
image/: resource.qrc
src/: CentralViewWidget.cpp  CentralViewWidget.h  GlobalDefines.h  OccDemoMainWindow.cpp  OccDemoMainWindow.h  QDialogManager.cpp  QDialogManager.h  QDocumentManager.cpp  QDocumentManager.h  QOccDocument.cpp  QOccDocument.h  QOccGeoSelector.cpp  QOccGeoSelector.h  QOccPlanePointSelector.cpp  QOccPlanePointSelector.h  main.cpp
src/Dialog/: DialogBase.cpp  DialogBase.h  DialogFeatureBase.cpp  DialogFeatureBase.h  DialogFeatureChamfer.cpp  DialogFeatureChamfer.h  DialogFeatureCube.cpp  DialogFeatureCube.h  DialogFeatureCylinder.cpp  DialogFeatureCylinder.h  DialogFeatureSphere.cpp  DialogFeatureSphere.h  DialogInputPosition.cpp  DialogInputPosition.h
src/Dialog/Components/: GridItemBase.cpp  GridItemBase.h  GridItemGeoSelector.cpp  GridItemGeoSelector.h  QOccEdgeSelector.cpp  QOccEdgeSelector.h  QOccFaceSelector.cpp  QOccFaceSelector.h  QOccGeoSelector.cpp  QOccGeoSelector.h  QOccPointSelector.cpp  QOccPointSelector.h  QOccShellSelector.cpp  QOccShellSelector.h  QOccVertexSelector.cpp  QOccVertexSelector.h
src/Feature/: FeatureAttach.cpp  FeatureAttach.h  FeatureBase.cpp  FeatureBase.h  FeatureChamfer.cpp  FeatureChamfer.h  FeatureCube.cpp  FeatureCube.h  FeatureCylinder.cpp  FeatureCylinder.h  FeatureIsolate.cpp  FeatureIsolate.h  FeatureMerge.cpp  FeatureMerge.h  FeatureSphere.cpp  FeatureSphere.h
src/Frame/: MessageRouter.cpp  MessageRouter.h
src/ModelTree/: DocumentTreeItemModel.cpp  DocumentTreeItemModel.h  LeftTreeViewWidget.cpp  LeftTreeViewWidget.h
src/Render/: QOccVtkInteractorStyle.cpp  QOccVtkInteractorStyle.h  QOccVtkSelPipeline.cpp  QOccVtkSelPipeline.h  vtkSelectableCoordinate.cpp  vtkSelectableCoordinate.h
